converting to Integer improved